Fix time text alignment in header

--- a/Instanssi/main2017/static/main2017/css/_header.scss
+++ b/Instanssi/main2017/static/main2017/css/_header.scss
@@ -47,7 +47,7 @@
         }
         .time {
             font-size: 24px;
-            padding-top:200px;
+            padding: 180px 0 0 5px;
         }
 
         h1 {
